5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1646_2728.log
== SUBMITION (2019-04-16 09:37:17) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro.upper() == A:
	c = 8/d

	
-- EXECUTION TIME:
0.140155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2728/main.py", line 4, in <module>
    if carro.upper() == A:
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:37:19) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro.upper() == A:
	c = 8/d

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro.upper() == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:37:19) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro.upper() == A:
	c = 8/d

	
-- EXECUTION TIME:
0.149632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2728/main.py", line 4, in <module>
    if carro.upper() == A:
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:37:28) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro.upper() == A:
	c = 8/d

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro.upper() == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:37:36) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == A:
	c = 8/d

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:37:54) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "A":
	c = 8/d

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:38:05) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "A":
	c = 8/d
	print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:38:16) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "A":
	c = 12/d
	print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:38:36) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "A":
	c = 12/d*100
	print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:38:58) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "A":
	c = 12.5/d*100
	print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if carro == A:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:39:28) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(c)
if carro == "A":
	c = 8/d*100
	print(c)
-- OUTPUT:
19.230769230769234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:39:30) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(c)
if carro == "A":
	c = 8/d*100
	print(c)
-- EXECUTION TIME:
0.143942
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
19.230769230769234
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
12.307692307692308
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:39:37) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(c)
if carro == "A":
	c = 8/d*100
	print(c)
-- OUTPUT:
19.230769230769234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:39:48) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(c)
if carro == "A":
	c = 8/d*100
	print(c)
-- OUTPUT:
19.230769230769234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:40:21) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(round(c),2)
if carro == "A":
	c = 8/d*100
	print(round(c),2)
-- EXECUTION TIME:
0.121039
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
19 2
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
12 2
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
4 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:40:21) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(round(c),2)
if carro == "A":
	c = 8/d*100
	print(round(c),2)
-- OUTPUT:
19 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:40:38) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(round(c,2))
if carro == "A":
	c = 8/d*100
	print(round(c,2))
-- EXECUTION TIME:
0.175508
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
19.23
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
12.31
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:40:39) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(round(c,2))
if carro == "A":
	c = 8/d*100
	print(round(c,2))
-- OUTPUT:
19.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:40:45) 
-- CODE:
d = float(input("percurso: "))
carro = input("tipo de carro: (A/B)")

if carro == "B":
	c = 12.5/d*100
	print(round(c,2))
if carro == "A":
	c = 8/d*100
	print(round(c,2))
-- OUTPUT:
19.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
